# wasmrust

./: .gitignore  Cargo.toml  README.md  justfile
examples/: index.html
examples/complex-yew/: Cargo.toml  Trunk.toml  index.html
examples/complex-yew/src/: main.rs
examples/simple-rust/: Cargo.toml
examples/simple-rust/src/: lib.rs
examples/simple-web/: Cargo.toml
examples/simple-web/src/: lib.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
