[package]
name = "wasmrust"
version = "0.3.1"
edition = "2021"
authors = ["Kumar Anirudha <wasm@anirudha.dev>"]
description = "Rust WebAssembly plugin for Wasmrun - compile Rust projects to WebAssembly with wasm-bindgen support"
homepage = "https://github.com/anistark/wasmrust"
repository = "https://github.com/anistark/wasmrust"
license = "MIT"
keywords = ["webassembly", "wasm", "rust", "wasm-bindgen", "wasmrun"]
categories = ["development-tools", "web-programming"]
readme = "README.md"

[lib]
name = "wasmrust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasmrust"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"], optional = true }

# For dynamic loading (Unix-like systems)
[target.'cfg(not(target_os = "windows"))'.dependencies]
libloading = "0.8"

[features]
default = []
cli = ["clap"]
standalone = []

[dev-dependencies]
tempfile = "3.0"

[package.metadata.wasm_plugin]
name = "rust"
extensions = ["rs", "toml"]
entry_files = ["Cargo.toml", "src/main.rs", "src/lib.rs"]

[package.metadata.wasm_plugin.capabilities]
supported_languages = ["rust"]
compile_wasm = true
compile_webapp = true
live_reload = true
optimization = true
custom_targets = ["wasm32-unknown-unknown", "web"]

[package.metadata.wasm_plugin.dependencies]
tools = ["cargo", "rustc", "wasm-pack"]
optional_tools = ["trunk", "wasm-opt", "rustup"]

[package.metadata.wasm_plugin.exports]
create_wasm_builder = "create_wasm_builder"
can_handle_project = "wasmrust_can_handle_project"
build = "wasmrust_build"
clean = "wasmrust_clean"
clone_box = "wasmrust_clone_box"
drop = "wasmrust_drop"
plugin_create = "wasmrun_plugin_create"

[package.metadata.wasm_plugin.frameworks]
supported = ["yew", "leptos", "dioxus", "sycamore", "trunk"]
auto_detect = true
