[package]
name = "complex-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.4"
gloo-storage = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "InputEvent",
  "Event",
  "EventTarget",
]

[dependencies.js-sys]
version = "0.3"
